--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: beevelop/ionic
+      - image: beevelop/ionic:latest
     steps:
       - checkout
       - run:
