--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
           command: npm install
       - run:
           name: Building android
-          command: ionic cordova build android
+          command: ionic cordova build android -Y
+      - run:
+          name: Ought to Copy
+          command: cp -r platforms/android/build/outputs/apk $CIRCLE_ARTIFACTS
       - store_artifacts:
           path: platforms/android/build/outputs/apk/android-debug.apk
