--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
             find . -type d | sed -e "s/[^-][^\/]*\//  |/g" -e "s/|\([^ ]\)/|-\1/"
             mkdir -p /tmp/build
             ionic cordova build android -Y
+            find . -type d | sed -e "s/[^-][^\/]*\//  |/g" -e "s/|\([^ ]\)/|-\1/"
             cp platforms/android/build/outputs/apk/ /tmp/build
       - store_artifacts:
           path: /tmp/build
