--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,7 @@ jobs:
       - run:
           name: Building android
           command: |
-            find . -type d | sed -e "s/[^-][^\/]*\//  |/g" -e "s/|\([^ ]\)/|-\1/"
-            mkdir -p /tmp/build
             ionic cordova build android -Y
             find . -type f -iname "*.apk"
       - store_artifacts:
-          path: /tmp/build
+          path: ./platforms/android/app/build/outputs/apk/debug/app-debug.apk
