--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,6 @@ jobs:
           name: Building android
           command: |
             ionic cordova build android -Y
-            find . -type f -iname "*.apk"
+            mv ./platforms/android/app/build/outputs/apk/debug/app-debug.apk "./platforms/android/app/build/outputs/apk/debug/18 Avril.apk"
       - store_artifacts:
-          path: ./platforms/android/app/build/outputs/apk/debug/app-debug.apk
+          path: "./platforms/android/app/build/outputs/apk/debug/18 Avril.apk"
